<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:background="#C0C0C0" >
       <TextView
        android:id="@+id/security_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/pair"
        android:textSize="15sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:orientation="horizontal" >
    	<Button
        	android:id="@+id/first_ticker_button"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="5"
        	android:text="@string/first_ticker"
        	android:background="@drawable/button_custom"
        	android:textSize="25sp" />
    	<View
    	    android:layout_height="1dp"
    	    android:layout_width="0dp"
    	    android:layout_weight="0" />
    	<Button
        	android:id="@+id/second_ticker_button"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="5"
        	android:text="@string/second_ticker"
        	android:background="@drawable/button_custom"
        	android:textSize="25sp" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#12586F" />
    <TextView
        android:id="@+id/start_date_button_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/start_date"
        android:textSize="15sp" />
    <Button
        android:id="@+id/start_date_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/start_date2"
        android:background="@drawable/button_custom"
        android:textSize="25sp" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#12586F" />
    <TextView
        android:id="@+id/end_date_button_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/end_date"
        android:textSize="15sp" />
    <Button
        android:id="@+id/end_date_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/end_date2"
        android:background="@drawable/button_custom"
        android:textSize="25sp" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#12586F" />
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="8dp"
        android:orientation="horizontal" >
    	<Button
        	android:id="@+id/save_button"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="5"
        	android:text="@string/save_pair"
        	android:background="@drawable/button_custom"
        	android:textSize="25sp" />
    	<View
    	    android:layout_height="1dp"
    	    android:layout_width="0dp"
    	    android:layout_weight="0" />
    	<Button
        	android:id="@+id/run_button"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="5"
        	android:text="@string/load_pair"
        	android:background="@drawable/button_custom"
        	android:textSize="25sp" />
    </LinearLayout>
   </LinearLayout> 
</ScrollView>
