<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#C0C0C0" >
    
    <LinearLayout 
        android:id="@+id/title_and_switch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:background="#C0C0C0">
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="#000000" />
    <Spinner
        android:id="@+id/series_type_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2" /> 
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/series_chart"
        android:layout_width="wrap_content"
        android:layout_height="190dp"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp" />
    
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:background="#000000" >
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="26dp" >
            <TextView
                android:id="@+id/correlation_title"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#DCDCDC"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:text="@string/correlation" />
            <TextView
                android:id="@+id/five_day_change_title"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#DCDCDC"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="0dp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:text="@string/five_day_change" />
            <TextView
                android:id="@+id/one_day_change_title"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="#DCDCDC"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="0dp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:text="@string/one_day_change" />
            <TextView
                android:id="@+id/last_title"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="#DCDCDC"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="0dp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:text="@string/last" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="26dp" >
            <TextView
                android:id="@+id/correlation"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#DCDCDC"
                android:layout_marginTop="0dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:gravity="center_horizontal" />
            <TextView
                android:id="@+id/five_day_change"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#DCDCDC"
                android:layout_marginTop="0dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="0dp"
                android:gravity="center_horizontal" />
            <TextView
                android:id="@+id/one_day_change"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="#DCDCDC"
                android:layout_marginTop="0dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="0dp"
                android:gravity="center_horizontal" />
            <TextView
                android:id="@+id/last"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="#DCDCDC"
                android:layout_marginTop="0dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="0dp"
                android:gravity="center_horizontal" />
        </TableRow>
        </TableLayout>
        
        <LinearLayout 
        	android:id="@+id/return_line_chart"
        	android:layout_width="wrap_content"
        	android:layout_height="190dp"
        	android:orientation="vertical"
        	android:layout_marginTop="8dp"
        	android:layout_marginRight="8dp"
        	android:layout_marginLeft="8dp"
       	 	android:layout_marginBottom="8dp" />
        
        <TextView
            android:id="@+id/date_disclaimer_pairs_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
        	android:textColor="#888888"
            android:layout_marginBottom="8dp" 
            android:layout_marginLeft="10dp"/>
    
</LinearLayout>
</ScrollView>
